src/objects/Survey_Response__c.object
<CustomObject>
    <description>Generic Object to hold responses for Quick Starts, and custom Surveys built by end-users.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Areas_of_Improvement__c</fullName>
        <label>Areas of Improvement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Study__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Study</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Responded__c</fullName>
        <label>Date Responded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Did_we_offer_lowest_bid__c</fullName>
        <label>Did we offer lowest bid?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Early_Beta_Access__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Early Beta Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expectation_Explanation__c</fullName>
        <label>Expectation Explanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expectations_Met__c</fullName>
        <label>Expectations Met</label>
        <picklist>
            <picklistValues>
                <fullName>Far short of expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short of expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equals expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceeds expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Far exceeds expectations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joint_Press_Release__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Joint Press Release</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Drivers_for_new_solution__c</fullName>
        <label>Key Drivers for new solution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Selection_Criteria__c</fullName>
        <label>Key Selection Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Meeting_Goal_s__c</fullName>
        <label>Meeting Goal(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Promoter_Score__c</fullName>
        <label>Net Promoter Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Feedback__c</fullName>
        <label>Other Feedback</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Participation__c</fullName>
        <label>Other Participation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_Strenth_Weakness__c</fullName>
        <label>Other Vendor(s) - Strenth/Weakness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Vendor_offer_lowest_bid__c</fullName>
        <label>Other Vendor(s) offer lowest bid?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Vendors_Considered__c</fullName>
        <label>Other Vendors Considered</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Our_Strengths_Weaknesses__c</fullName>
        <label>Our Strengths/Weaknesses</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Overal_Satisfaction__c</fullName>
        <label>Overal Satisfaction</label>
        <picklist>
            <picklistValues>
                <fullName>Very Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Satisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Q_Recipient_ID__c</fullName>
        <externalId>true</externalId>
        <label>Q_Recipient ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Q_SurveyID__c</fullName>
        <externalId>true</externalId>
        <label>Q_SurveyID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Respondent_Role__c</fullName>
        <label>Respondent Role</label>
        <picklist>
            <picklistValues>
                <fullName>I am the sole decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am a major influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I participate with others in making these decisions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I have little or no role in these decisions</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Vendor__c</fullName>
        <label>Selected Vendor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Responses</relationshipLabel>
        <relationshipName>Survey_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Knowledgeable__c</fullName>
        <label>Team - Knowledgeable</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Pleasant_to_work_with__c</fullName>
        <label>Team - Pleasant to work with</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Professional__c</fullName>
        <label>Team - Professional</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Team_Understood_your_Needs__c</fullName>
        <label>Team - Understood your Needs</label>
        <picklist>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Below Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Above Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exceptional</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Testimonial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Testimonial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeline_Goal__c</fullName>
        <label>Timeline Goal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timeline_Met__c</fullName>
        <label>Timeline Met?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vendors_Considered__c</fullName>
        <label>Vendors Considered</label>
        <picklist>
            <picklistValues>
                <fullName>Company A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Vendors_Using__c</fullName>
        <label>Vendors Using</label>
        <picklist>
            <picklistValues>
                <fullName>Company A</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Winning_Bid_Price__c</fullName>
        <label>Winning Bid Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Survey Response</label>
    <nameField>
        <label>Survey Response Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Responses</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>